<resources>
    <string name="app_name">NetworkCoding</string>
    <string name="menu_side">navigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">NetworkCoding</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_send">Send</string>
    <string name="menu_history">History</string>
    <string name="menu_send">Send</string>
    <string name="menu_receive">Receive</string>
    <string name="history">History</string>
    <string name="send">Send</string>
    <string name="receive">Receive</string>
    <string name="url">ws://172.17.100.2:8080/NetworkCoding/socket</string>
    <string name="select_file">您选择了</string>
    <string name="file">文件</string>
    <string name="positive">确定</string>
    <string name="negative">取消</string>
    <string name="database_not_init">数据库还没有初始化</string>
    <string name="something_wrong">出现了点问题</string>
    <string name="no_internet">没有网络</string>

</resources>
